Fix Minecraft Release Candidate broken links
Signed-off-by: KiriCattus <19393068+KiriCattus@users.noreply.github.com>